dpkg (1.18.7) UNRELEASED; urgency=medium

  [ Guillem Jover ]
  * Perl modules:
    - Relax dependency restrictions parsing to allow again sloppy spaces
      around versions, architectures and profile restrictions.
      Regression introduced in 1.18.5. Closes: #823431
  * Documentation:
    - Shorten example symbol names in dpkg-gensymbols to avoid a mandb
      warning due to unwrappable lines in translations.

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).

  [ Updated manpages translations ]
  * German (Helge Kreutzmann).

 -- Guillem Jover <guillem@debian.org>  Tue, 03 May 2016 21:07:19 +0200

dpkg (1.18.6) unstable; urgency=medium

  [ Guillem Jover ]
  * Fix file queue tail assignment on file queue pop during unpack. This
    could mess up the file queue in some circumstances and leave behind
    files in the filesystem as «pathname».dpkg-new after configuration
    and without traces of the files in the dpkg database. Closes: #823288
  * Use m_strdup() instead of strdup() in dpkg recursive installation code.
  * Fix off-by-one array allocation in dpkg recursive installation code that
    can cause segfaults.
  * Rename sysctl() “name” variable to “mib”, to avoid a clash with the
    call site function argument with the same name in start-stop-daemon.
    This fixes a build failure on */kFreeBSD systems.
  * Initialize number of entries on initial process scan in start-stop-daemon
    on */kFreeBSD.
  * Packaging:
    - Bump Standards-Version to 3.9.8 (no changes needed).

  [ Updated programs translations ]
  * German (Sven Joachim).

 -- Guillem Jover <guillem@debian.org>  Tue, 03 May 2016 20:17:05 +0200

dpkg (1.18.5) unstable; urgency=medium

  [ Guillem Jover ]
  * Print correct integer parse error for short-only command-line options.
    This affects «dpkg-deb -z». Closes: #809174
  * Do not abort when traversing symlinks to directories in dpkg-scanpackages
    and dpkg-scansources. Closes: #809219